The AI got smarter
AI knows not to put ships outside the board or on the top of an
existing ship.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,8 +62,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.BattleShip_Trafalgar=../BattleShip_Trafalgar
-project.Tournament_Trafalgar=../Tournament_Trafalgar
+project.BattleShip_Trafalgar=../../../../../Downloads/Battleship and Tournament Trafalgar/BattleShip_Trafalgar
+project.Tournament_Trafalgar=../../../../../Downloads/Battleship and Tournament Trafalgar/Tournament_Trafalgar
 reference.BattleShip_Trafalgar.jar=${project.BattleShip_Trafalgar}/dist/BattleShip_Trafalgar.jar
 reference.Tournament_Trafalgar.jar=${project.Tournament_Trafalgar}/dist/Tournament_Trafalgar.jar
 run.classpath=\
