--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${reference.BattleShip_Trafalgar.jar}:\
     ${reference.Tournament_Trafalgar.jar}
@@ -57,13 +57,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=g9.G9
+main.class=g9.SingleMatchExample
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
-project.BattleShip_Trafalgar=../../../../../Downloads/Battleship and Tournament Trafalgar/BattleShip_Trafalgar
-project.Tournament_Trafalgar=../../../../../Downloads/Battleship and Tournament Trafalgar/Tournament_Trafalgar
+platform.active=JDK_1.8
+project.BattleShip_Trafalgar=../../../../../Downloads/BattleShip_Trafalgar
+project.Tournament_Trafalgar=../../../../../Downloads/Tournament_Trafalgar
 reference.BattleShip_Trafalgar.jar=${project.BattleShip_Trafalgar}/dist/BattleShip_Trafalgar.jar
 reference.Tournament_Trafalgar.jar=${project.Tournament_Trafalgar}/dist/Tournament_Trafalgar.jar
 run.classpath=\
